[gd_scene load_steps=14 format=3 uid="uid://cgugn3bf4jeqc"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_74fhc"]
[ext_resource type="Texture2D" uid="uid://dpunmykr44ji8" path="res://art/posso.png" id="2_bqxas"]
[ext_resource type="Texture2D" uid="uid://btgh7roshcvyg" path="res://art/posso4.png" id="2_ptcex"]
[ext_resource type="Texture2D" uid="uid://d3s8wh46rpuuq" path="res://art/posso2.png" id="3_6pil5"]
[ext_resource type="Texture2D" uid="uid://b8jxhvetxjbkk" path="res://art/posso3.png" id="5_wuusj"]
[ext_resource type="AudioStream" uid="uid://6qqllpry4m4u" path="res://äänet/NOMliike.wav" id="6_eclsa"]
[ext_resource type="AudioStream" uid="uid://d0nxlijufvxkt" path="res://äänet/liike.mp3" id="6_gkxe0"]
[ext_resource type="AudioStream" uid="uid://beak4bwe8en1t" path="res://äänet/hyppy1.wav" id="7_xfy7k"]
[ext_resource type="AudioStream" uid="uid://lxsq0ghqmqax" path="res://äänet/hyppy2.wav" id="8_ahfi8"]
[ext_resource type="AudioStream" uid="uid://bjekjpx1lbwqt" path="res://äänet/hyppy3.wav" id="9_o5mrm"]
[ext_resource type="AudioStream" uid="uid://c0l20vbou2lnw" path="res://äänet/restart1.mp3" id="11_thjxk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_11v07"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ptcex")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bqxas")
}],
"loop": true,
"name": &"idle",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_wuusj")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6pil5")
}, {
"duration": 1.0,
"texture": ExtResource("5_wuusj")
}],
"loop": true,
"name": &"walk",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3wgw"]
radius = 30.0
height = 89.0

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_74fhc")
jump_force = 500
walk_stamina_drain = 25
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_11v07")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_a3wgw")
one_way_collision_margin = 0.0

[node name="move" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_eclsa")

[node name="hyppy1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xfy7k")

[node name="hyppy2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ahfi8")

[node name="hyppy3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_o5mrm")

[node name="cantWalkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_gkxe0")

[node name="cantJumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_thjxk")
